# SP25-690-Sriramaneni

./: .gitignore  README.md  compare_models.py  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
data/: metadata.csv
src/: data_loader.py
src/audio/: audio_features.py
src/data/: data_loader.py  dataset.py
src/evaluation/: metrics.py
src/models/: cnn.py  mlp.py  multimodal.py
src/utils/: config_loader.py
