[project]
name = "sp25-690-sriramaneni"
version = "0.1.0"
description = "Emotion-aware music sentiment baseline using PyTorch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa",
    "matplotlib",
    "numpy",
    "pandas",
    "pyyaml",
    "scikit-learn",
  "torch",
]

[project.scripts]
main = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false
package = true

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
