[project]
name = "sp25-690-sriramaneni"
version = "0.1.0"
description = "Emotion-aware music sentiment baseline using PyTorch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa",
    "matplotlib",
    "numpy",
    "pandas",
    "pyyaml",
    "scikit-learn",
    "torch",
]

[project.scripts]
main = "main:main"
compare-models = "compare_models:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["main", "compare_models"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
